crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_normalizes_native_python_producer_names_for_both_manifest_formats-2.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: poetry_manifest
---
[tool.poetry]
name = "poetry-cli"
version = "2.0.1"

[tool.poetry.dependencies]
py-core = ">=1.1.0" # Keep the canonical dependency spelling.
