crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_normalizes_native_python_producer_names_for_both_manifest_formats-3.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: pep621_manifest
---
[project]
name = "pep621-cli"
version = "2.0.1"
dependencies = ["py_core>=1.1.0"] # Preserve the dependency's spelling.
