crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_normalizes_native_python_producer_names_for_both_manifest_formats.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: "release[\"plan\"]"
---
{
  "compatibility_evidence": [],
  "decisions": [
    {
      "bump": "minor",
      "package": "python:core/pyproject.toml",
      "planned_version": "1.1.0",
      "reasons": [
        "Add response parsing helpers."
      ],
      "trigger": "direct-change",
      "upstream_sources": [
        "python:core/pyproject.toml"
      ]
    },
    {
      "bump": "patch",
      "package": "python:pep621/pyproject.toml",
      "planned_version": "2.0.1",
      "reasons": [
        "depends on `python:core/pyproject.toml`"
      ],
      "trigger": "transitive-dependency",
      "upstream_sources": [
        "python:core/pyproject.toml"
      ]
    },
    {
      "bump": "patch",
      "package": "python:poetry/pyproject.toml",
      "planned_version": "2.0.1",
      "reasons": [
        "depends on `python:core/pyproject.toml`"
      ],
      "trigger": "transitive-dependency",
      "upstream_sources": [
        "python:core/pyproject.toml"
      ]
    }
  ],
  "groups": [],
  "unresolved_items": [],
  "warnings": [],
  "workspace_root": "."
}
