crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_updates_internal_poetry_dependency_constraints-2.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: manifest
---
[tool.poetry]
name = "py-cli"
version = "2.0.1"

[tool.poetry.dependencies]
python = "^3.10"
py-core = { version = ">=1.1.0", extras = ["cli"], optional = true } # Preserve extras and comments.

[tool.poetry.group.dev.dependencies]
py-core = ">=1.1.0"

[tool.poetry.group.test.dependencies]
py-core = { path = "../core", develop = true }
