crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_updates_poetry_version_and_preserves_metadata-2.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: manifest
---
[tool.poetry]
name = "poetry-app"
version = "3.1.1" # Keep the release version comment.
description = "A Poetry-managed package"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
