crates/monochange_integration_tests/tests/snapshots/python_poetry_version__prepare_release_updates_poetry_version_and_preserves_metadata.snap
---
source: crates/monochange_integration_tests/tests/python_poetry_version.rs
expression: "planned[\"plan\"]"
---
{
  "compatibility_evidence": [],
  "decisions": [
    {
      "bump": "patch",
      "package": "python:pyproject.toml",
      "planned_version": "3.1.1",
      "reasons": [
        "Fix the package's response handling."
      ],
      "trigger": "direct-change",
      "upstream_sources": [
        "python:pyproject.toml"
      ]
    }
  ],
  "groups": [],
  "unresolved_items": [],
  "warnings": [],
  "workspace_root": "."
}
